syntax = "proto3";

option csharp_namespace = "AuctionService";

service GrpcAuction {
    rpc GetAuction (GetAuctionRequest) returns (GrpcAuctionResponse);
}

message GetAuctionRequest {
    string id = 1;
}

message GrpcAuctionModel {
    string id = 1;
    string seller = 2;
    string auctionEnd = 3; // Assuming this is a date or timestamp, consider using "google.protobuf.Timestamp" or "google.type.Date" if supported
    int32 reservePrice = 4;
}

message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}
